# drone

./: .gitignore  README.md
install/: setup.ps1
install/icm20948_driver/lib/icm20948_driver/: icm20948_node
install/icm20948_driver/share/icm20948_driver/: package.dsv  package.ps1  package.sh  package.xml
install/icm20948_driver/share/icm20948_driver/cmake/: icm20948_driverConfig.cmake
install/mission_node/lib/mission_node/: odom_emulator
install/mission_node/share/mission_node/: package.bash  package.sh
install/msp_bridge/share/msp_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/msp_bridge/share/msp_bridge/cmake/: msp_bridgeConfig.cmake
install/simple_vo/share/simple_vo/: package.sh
install/vo_system/share/vo_system/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vo_system/share/vo_system/cmake/: vo_systemConfig.cmake
install/vo_system/share/vo_system/launch/: vo_system.launch.py
log/: latest_build
src/icm20948_driver/: CMakeLists.txt
src/icm20948_driver/src/: icm20948_node.cpp
src/install/: setup.ps1
src/install/mission_node/lib/mission_node/: mission_node
src/install/mission_node/share/mission_node/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/simple_vo/lib/simple_vo/: simple_vo_node
src/install/simple_vo/share/simple_vo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/log/: latest_build
src/mission_node/: setup.cfg  setup.py
src/mission_node/mission_node/: mission_node.py
src/msp_bridge/: CMakeLists.txt  package.xml
src/msp_bridge/src/: msp_bridge.cpp
src/simple_vo/: setup.cfg  setup.py
src/vo_system/: CMakeLists.txt  package.xml
src/vo_system/launch/: vo_system.launch.py
(+2 files in other folders)
